--- a/modal.html
+++ b/modal.html
@@ -12,6 +12,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 [stylesheet-group="2"]{}
 .r-11mg6pl{border-bottom-color:rgba(255,255,255,1.00);border-left-color:rgba(255,255,255,1.00);border-right-color:rgba(255,255,255,1.00);border-top-color:rgba(255,255,255,1.00);}
 .r-13awgt0{flex:1;}
+.r-1867qdf{border-bottom-left-radius:16px;border-bottom-right-radius:16px;border-top-left-radius:16px;border-top-right-radius:16px;}
 .r-1awa8pu{border-bottom-color:rgba(101,119,134,1.00);border-left-color:rgba(101,119,134,1.00);border-right-color:rgba(101,119,134,1.00);border-top-color:rgba(101,119,134,1.00);}
 .r-1bq2mok{margin:3px;}
 .r-1d4xg89{border-bottom-color:rgba(170,184,194,1.00);border-left-color:rgba(170,184,194,1.00);border-right-color:rgba(170,184,194,1.00);border-top-color:rgba(170,184,194,1.00);}
@@ -71,6 +72,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1xpp3t0{margin-left:16px;margin-right:16px;}
 .r-1yd117h{padding-bottom:7px;padding-top:7px;}
 .r-3o4zer{padding-left:12px;padding-right:12px;}
+.r-cnw61z{padding-bottom:4px;padding-top:4px;}
 .r-cxgwc0{padding-left:24px;padding-right:24px;}
 .r-dd0y9b{padding-bottom:20px;padding-top:20px;}
 .r-f8sm7e{margin-left:auto;margin-right:auto;}
@@ -112,6 +114,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-10v3vxq{transform:scaleX(-1);}
 .r-10x49cs{font-size:10px;}
 .r-10xqauy{padding-top:env(safe-area-inset-top);}
+.r-111xbm8{font-size:42px;}
 .r-117bsoe{margin-bottom:20px;}
 .r-118dpqk{color:rgba(15,15,26,1.00);}
 .r-11j9u27{visibility:hidden;}
@@ -194,6 +197,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1iuttuq{bottom:-90px;}
 .r-1janqcz{width:16px;}
 .r-1jkjb{margin-left:8px;}
+.r-1k0yevp{background-color:rgba(90,45,61,1.00);}
 .r-1kb76zh{margin-right:8px;}
 .r-1kfrs79{font-weight:600;}
 .r-1kihuf0{align-self:center;}
@@ -238,6 +242,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1w2pmg{height:0px;}
 .r-1w6e6rj{flex-wrap:wrap;}
 .r-1wbh5a2{flex-shrink:1;}
+.r-1wnl9qo{background-color:rgba(90,74,45,1.00);}
 .r-1wtj0ep{justify-content:space-between;}
 .r-1wyyakw{z-index:-1;}
 .r-1x35g6{font-size:24px;}
@@ -246,6 +251,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1xpsq9i{box-shadow:0px 3px 3px rgba(0, 0, 0, 0.33);}
 .r-1xzupcd{width:13px;}
 .r-1yef0xd{animation-name:r-11cv4x;}
+.r-1yis5wz{color:rgba(204,204,204,1.00);}
 .r-2eszeu::-webkit-scrollbar{display:none}
 .r-2eszeu{scrollbar-width:none;}
 .r-30o5oe{-moz-appearance:none;-ms-appearance:none;-webkit-appearance:none;appearance:none;}
@@ -277,6 +283,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-87bcf5{font-size:80px;}
 .r-8akbws{-webkit-box-orient:vertical;}
 .r-8ay8q1{letter-spacing:0.1px;}
+.r-8d26hk{margin-bottom:40px;}
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
 .r-9daxd3{animation-duration:250ms;}
 .r-a023e6{font-size:15px;}
@@ -292,6 +299,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-bv2aro{padding-left:env(safe-area-inset-left);}
 .r-c1zdzb{background-color:rgba(74,222,128,1.00);}
 .r-c68hjy{color:rgba(161,161,161,1.00);}
+.r-cfp7ip{width:60px;}
 .r-cpa5s6{scroll-snap-align:start;}
 .r-cqee49{color:rgba(0,0,0,1.00);}
 .r-djgu52{color:rgba(102,102,102,1.00);}
@@ -303,6 +311,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ejnhls{background-color:rgba(58,58,94,1.00);}
 .r-eqz5dr{flex-direction:column;}
 .r-eu3ka{height:40px;}
+.r-evnaw{font-size:22px;}
 .r-f4gmv6{gap:16px;}
 .r-f6603h{background-color:rgba(90,45,45,1.00);}
 .r-fdjqy7{text-align:left;}
@@ -311,8 +320,10 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-gtdqiz{position:-webkit-sticky;position:sticky;}
 .r-h0d30l{height:28px;}
 .r-hbdj1y{background-color:rgba(42,42,62,1.00);}
+.r-hvns9x{max-width:400px;}
 .r-hxflta{padding-right:env(safe-area-inset-right);}
 .r-icoktb{opacity:0.5;}
+.r-ihs9ts{background-color:rgba(58,138,90,1.00);}
 .r-ipm5af{top:0px;}
 .r-jwli3a{color:rgba(255,255,255,1.00);}
 .r-k200y{align-self:flex-start;}
@@ -325,6 +336,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-lpb231{height:168px;}
 .r-lrsllp{width:24px;}
 .r-lrvibr{-moz-user-select:none;-webkit-user-select:none;user-select:none;}
+.r-m1ayd3{background-color:rgba(138,90,58,1.00);}
 .r-majxgm{font-weight:500;}
 .r-mfh4gg{scroll-snap-type:x mandatory;}
 .r-mhe3cw{z-index:10;}
@@ -380,5 +392,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-mm4w40 r-13awgt0"><div class="css-g5y9jx r-13awgt0"><div aria-hidden="true" class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(15,15,26,1.00);display:none"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><!--$--><div class="css-g5y9jx r-13awgt0" style="flex-direction:column"><div class="css-g5y9jx r-13awgt0 r-1udh08x"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="z-index:0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-97e31f r-bv2aro r-hxflta r-10xqauy r-mm4w40 r-13awgt0"><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci"><div dir="auto" class="css-146c3p1 r-xdvzot r-ubezar">Loading puzzle...</div></div></div><!--/$--></div></div></div></div><div class="css-g5y9jx r-1p0dtai r-zchlnj r-1d2f490 r-105ug2t" style="border-top-width:1px;border-right-color:rgba(39,39,41,1.00);border-bottom-color:rgba(39,39,41,1.00);border-left-color:rgba(39,39,41,1.00);height:49px;padding-bottom:0px;padding-top:0px;padding-right:0px;padding-left:0px;background-color:rgba(15,15,26,1.00);border-top-color:rgba(42,42,78,1.00);display:none;transform:translateY(0px)"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-633pao"></div><div role="tablist" class="css-g5y9jx r-13awgt0 r-18u37iz"><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible"><a href="/word-game/" role="tab" aria-selected="true" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1onu96p r-eqz5dr r-1h0z5md r-1uu6nss" style="cursor:pointer;flex:1;background-color:rgba(0,0,0,0.00);border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;opacity:1"><div class="css-g5y9jx r-h0d30l r-726pan"><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:1;min-width:25px"><div dir="auto" class="css-146c3p1"></div></div><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:0"><div dir="auto" class="css-146c3p1"></div></div></div><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1niwhzg r-q4m81j r-10x49cs" style="color:rgba(106,159,255,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Play</div></a></div><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible;display:none"></div></div></div></div><!--/$--></div></div></div><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(15,15,26,1.00);display:flex"><div class="css-g5y9jx r-184en5c r-12vffkv"><div class="css-g5y9jx r-12vffkv" style="height:64px"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv"><div class="css-g5y9jx r-qklmqi r-13awgt0 r-105ug2t" style="background-color:rgba(15,15,26,1.00);border-bottom-color:rgba(39,39,41,1.00)"></div></div><div class="css-g5y9jx r-633pao" style="height:0px"></div><div class="css-g5y9jx r-1oszu61 r-13awgt0 r-18u37iz r-12vffkv"><div class="css-g5y9jx r-1awozwy r-18u37iz r-1h0z5md r-12vffkv" style="margin-left:0px"><a href="/word-game/" aria-label="(tabs), back" role="link" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1onu96p r-1dzdj1l r-18u37iz r-n5f61p r-jdiy1a r-60vfwk r-1e084wi" style="cursor:pointer;opacity:1"><div class="css-g5y9jx r-1mlwlqe r-1udh08x r-417010 r-1472mwg r-1bq2mok r-1e97lx8 r-lrsllp"><div class="css-g5y9jx r-1niwhzg r-vvn4in r-u6sd8q r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw r-ehq7j7" style="filter:url(#tint-0)"></div><svg style="position:absolute;height:0;visibility:hidden;width:0"><defs><filter id="tint-0"><feFlood flood-color="rgb(229, 229, 231)"></feFlood><feComposite in2="SourceAlpha" operator="in"></feComposite></filter></defs></svg></div></a></div><div class="css-g5y9jx r-1777fci r-12vffkv" style="max-width:-68px;margin-left:4px"><h1 dir="auto" aria-level="1" role="heading" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1i10wst" style="color:rgba(229,229,231,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Modal</h1></div><div class="css-g5y9jx r-1awozwy r-18u37iz r-17s6mgv r-1iusvr4 r-16y2uox r-12vffkv" style="margin-right:0px"></div></div></div></div><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><!--$--><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci r-1pcd2l5" style="background-color:rgba(255,255,255,1.00)"><div dir="auto" class="css-146c3p1 r-1ui5ee8 r-vw2c0b r-37tt59" style="color:rgba(17,24,28,1.00)">This is a modal</div><a href="/word-game/" dir="auto" role="link" class="css-146c3p1 r-19h5ruw r-1d7mnkm r-1loqt21"><span class="css-1jxf684 r-1v78gzs r-ubezar r-17rnw9f">Go to home screen</span></a></div><!--/$--></div></div></div><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div></div></div><!--/$--></div></div><script src="/word-game/_expo/static/js/web/entry-c3b4e059c65bd7fbd57f4fea57e47a65.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/word-game/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-mm4w40 r-13awgt0"><div class="css-g5y9jx r-13awgt0"><div aria-hidden="true" class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(15,15,26,1.00);display:none"><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><!--$--><div class="css-g5y9jx r-13awgt0" style="flex-direction:column"><div class="css-g5y9jx r-13awgt0 r-1udh08x"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="z-index:0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><div class="css-g5y9jx r-13awgt0"><!--$--><div class="css-g5y9jx r-97e31f r-bv2aro r-hxflta r-10xqauy r-mm4w40 r-13awgt0"><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci r-1pcd2l5"><div dir="auto" class="css-146c3p1 r-jwli3a r-111xbm8 r-vw2c0b r-5oul0u">Fenceposts</div><div dir="auto" class="css-146c3p1 r-xdvzot r-1i10wst r-8d26hk">Daily Puzzles</div><div class="css-g5y9jx r-f4gmv6 r-hvns9x r-13qz1uu"><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-1867qdf r-1pcd2l5 r-1arpkv9" style="transition-duration:0s"><div dir="auto" class="css-146c3p1 r-jwli3a r-evnaw r-vw2c0b r-15zivkp">⭐ Easy</div><div dir="auto" class="css-146c3p1 r-1yis5wz r-1b43r93">Match 2 categories (left + top)</div></div><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-1867qdf r-1pcd2l5 r-1wnl9qo" style="transition-duration:0s"><div dir="auto" class="css-146c3p1 r-jwli3a r-evnaw r-vw2c0b r-15zivkp">⭐⭐ Medium</div><div dir="auto" class="css-146c3p1 r-1yis5wz r-1b43r93">Match 3 categories (left + top + right)</div></div><div tabindex="0" class="css-g5y9jx r-1i6wzkk r-lrvibr r-1loqt21 r-1otgn73 r-1awozwy r-1867qdf r-1pcd2l5 r-1k0yevp" style="transition-duration:0s"><div dir="auto" class="css-146c3p1 r-jwli3a r-evnaw r-vw2c0b r-15zivkp">⭐⭐⭐ Hard</div><div dir="auto" class="css-146c3p1 r-1yis5wz r-1b43r93">Match 4 categories (left + top + right + bottom)</div></div></div></div></div><!--/$--></div></div></div></div><div class="css-g5y9jx r-1p0dtai r-zchlnj r-1d2f490 r-105ug2t" style="border-top-width:1px;border-right-color:rgba(39,39,41,1.00);border-bottom-color:rgba(39,39,41,1.00);border-left-color:rgba(39,39,41,1.00);height:49px;padding-bottom:0px;padding-top:0px;padding-right:0px;padding-left:0px;background-color:rgba(15,15,26,1.00);border-top-color:rgba(42,42,78,1.00);display:none;transform:translateY(0px)"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-633pao"></div><div role="tablist" class="css-g5y9jx r-13awgt0 r-18u37iz"><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible"><a href="/word-game/" role="tab" aria-selected="true" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1onu96p r-eqz5dr r-1h0z5md r-1uu6nss" style="cursor:pointer;flex:1;background-color:rgba(0,0,0,0.00);border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;opacity:1"><div class="css-g5y9jx r-h0d30l r-726pan"><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:1;min-width:25px"><div dir="auto" class="css-146c3p1"></div></div><div class="css-g5y9jx r-1awozwy r-1kihuf0 r-1pi2tsx r-1777fci r-u8s1d r-13qz1uu" style="opacity:0"><div dir="auto" class="css-146c3p1"></div></div></div><div dir="auto" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1niwhzg r-q4m81j r-10x49cs" style="color:rgba(106,159,255,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Play</div></a></div><div class="css-g5y9jx r-13awgt0" style="border-top-left-radius:0px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px;overflow-x:visible;overflow-y:visible;display:none"></div></div></div></div><!--/$--></div></div></div><div class="css-g5y9jx r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(15,15,26,1.00);display:flex"><div class="css-g5y9jx r-184en5c r-12vffkv"><div class="css-g5y9jx r-12vffkv" style="height:64px"><div class="css-g5y9jx r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv"><div class="css-g5y9jx r-qklmqi r-13awgt0 r-105ug2t" style="background-color:rgba(15,15,26,1.00);border-bottom-color:rgba(39,39,41,1.00)"></div></div><div class="css-g5y9jx r-633pao" style="height:0px"></div><div class="css-g5y9jx r-1oszu61 r-13awgt0 r-18u37iz r-12vffkv"><div class="css-g5y9jx r-1awozwy r-18u37iz r-1h0z5md r-12vffkv" style="margin-left:0px"><a href="/word-game/" aria-label="(tabs), back" role="link" tabindex="0" class="css-g5y9jx r-1otgn73 r-1awozwy r-1onu96p r-1dzdj1l r-18u37iz r-n5f61p r-jdiy1a r-60vfwk r-1e084wi" style="cursor:pointer;opacity:1"><div class="css-g5y9jx r-1mlwlqe r-1udh08x r-417010 r-1472mwg r-1bq2mok r-1e97lx8 r-lrsllp"><div class="css-g5y9jx r-1niwhzg r-vvn4in r-u6sd8q r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw r-ehq7j7" style="filter:url(#tint-0)"></div><svg style="position:absolute;height:0;visibility:hidden;width:0"><defs><filter id="tint-0"><feFlood flood-color="rgb(229, 229, 231)"></feFlood><feComposite in2="SourceAlpha" operator="in"></feComposite></filter></defs></svg></div></a></div><div class="css-g5y9jx r-1777fci r-12vffkv" style="max-width:-68px;margin-left:4px"><h1 dir="auto" aria-level="1" role="heading" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1i10wst" style="color:rgba(229,229,231,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">Modal</h1></div><div class="css-g5y9jx r-1awozwy r-18u37iz r-17s6mgv r-1iusvr4 r-16y2uox r-12vffkv" style="margin-right:0px"></div></div></div></div><div class="css-g5y9jx r-13awgt0"><div class="css-g5y9jx r-13awgt0" style="background-color:rgba(15,15,26,1.00)"><!--$--><div class="css-g5y9jx r-1awozwy r-13awgt0 r-1777fci r-1pcd2l5" style="background-color:rgba(255,255,255,1.00)"><div dir="auto" class="css-146c3p1 r-1ui5ee8 r-vw2c0b r-37tt59" style="color:rgba(17,24,28,1.00)">This is a modal</div><a href="/word-game/" dir="auto" role="link" class="css-146c3p1 r-19h5ruw r-1d7mnkm r-1loqt21"><span class="css-1jxf684 r-1v78gzs r-ubezar r-17rnw9f">Go to home screen</span></a></div><!--/$--></div></div></div><div style="position:absolute;left:0;right:0;top:0;bottom:0;pointer-events:none;visibility:hidden"></div></div></div><!--/$--></div></div><script src="/word-game/_expo/static/js/web/entry-a1d551e9ee125e4523f1c2e2b39857b3.js" defer></script>
 </body></html>
